--- a/src/labormanager/FrontendBundle/Resources/config/routing.yml
+++ b/src/labormanager/FrontendBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 frontend_homepage:
     pattern:  /
-    defaults: { _controller: FrontendBundle:Default:index }
+    defaults: { _controller: FrontendBundle:Frontend:index }
